# lamarck

./: .gitignore  Cargo.toml  Dockerfile  README.md  transcript-channel-0-alternative-0-beast.srt  transcript-channel-0-alternative-0.srt  transcript.raw  transcript.txt
.github/workflows/: release.yml
src/: captions.rs  deepgram.rs  lib.rs  main.rs
src/captions/: beast_captions.rs  srt.rs
src/deepgram/: billing.rs  invitations.rs  keys.rs  members.rs  projects.rs  scopes.rs  transcription.rs  usage.rs
src/deepgram/transcription/: live.rs  prerecorded.rs
src/deepgram/transcription/prerecorded/: options.rs
tests/: deepgram_response.json  test-output.srt  test-output.txt
wix/: main.wxs
