[package]
name = "lamarck"
version = "0.4.1"
edition = "2021"
authors = ["Chris Biscardi", "Jacob Bolda"]
description = "A toolkit CLI for audio/visual manipulation such as generating SRT captions using Deepgram."
readme = "README.md"
repository = "https://github.com/christopherbiscardi/lamarck/"
license = "MIT"
keywords = ["captions"]
exclude = [
    "tests/tests_examples_prerecorded_from_file_Bueller-Life-moves-pretty-fast.mp3",
    "env.nu",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.9"
clap = { version = "3.2.12", features = ["derive", "env"] }
miette = { version = "5.1.1", features = ["fancy"] }
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
url = "2.2.2"
deepgram = "0.2.0"
time = { version = "0.3.11", features = ["formatting", "macros"] }
mime_guess = "2.0.4"
indicatif = "0.16.2"
itertools = "0.10.3"
