[package]
name = "lamarck"
version = "0.5.0"
edition = "2021"
authors = ["Chris Biscardi", "Jacob Bolda"]
description = "A toolkit CLI for audio/visual manipulation such as generating SRT captions using Deepgram."
readme = "README.md"
repository = "https://github.com/christopherbiscardi/lamarck/"
license = "MIT"
keywords = ["captions"]
exclude = [
    "tests/tests_examples_prerecorded_from_file_Bueller-Life-moves-pretty-fast.mp3",
    "env.nu",
]

[package.metadata.wix]
upgrade-guid = "94147B83-B10D-49F3-AC6D-2CA83320D783"
path-guid = "DFF504FD-BCCD-4861-A1B9-173F00FB0FE1"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.9"
clap = { version = "3.2.12", features = ["derive", "env"] }
miette = { version = "5.1.1", features = ["fancy"] }
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
url = "2.2.2"
deepgram = "0.2.0"
time = { version = "0.3.11", features = ["formatting", "macros"] }
mime_guess = "2.0.4"
indicatif = "0.16.2"
itertools = "0.10.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.1"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "ChristopherBiscardi/homebrew-lamarck"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["axodotdev", "github"]
